[package]
name = "fusion-api"
version = "0.1.0"
edition = "2021"

[dependencies]
ruint = { version = "1.10.1", default-features = false }

serde = { version = "1.0", default-features = false, features = ["alloc", "derive", "rc"] }

fusion-poseidon = { path = "../fusion-poseidon", default-features = false }
fusion-types = { path = "../fusion-types", default-features = false }

powdr-riscv-runtime = { path = "../../powdr/riscv-runtime", optional = true }

[features]
default = ["std"]
std = ["fusion-poseidon/std", "fusion-types/std"]
powdr = ["powdr-riscv-runtime", "fusion-poseidon/powdr"]
