[package]
name = "fusion-poseidon"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { version = "0.4.2", default-features = false, optional = true }
ruint = { version = "1.10.1", default-features = false, features = ["serde"] }

powdr-riscv-runtime = { path = "../../powdr/riscv-runtime", optional = true }

[features]
default = ["std"]
std = ["ark-ff"]
powdr = ["powdr-riscv-runtime"]
